# wise_city

./: .env.example  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.dev  Makefile  README.md  docker-compose.dev.yml  docker-compose.yml  pyproject.toml  requirements.txt  run.py  test_image.tif  启动指南.md  编程专家.md  附件1_项目简表.md  项目完成总结.md  项目需求与技术设计文档.md
.claude/: settings.local.json
app/: __init__.py  main.py
app/api/: api.py
app/api/v1/: detection.py  files.py  legal.py  system.py
app/core/: config.py  database.py
app/models/: database.py  detection.py  legal_regulations.py  violation_types.py
app/services/: __init__.py  ai_service.py  database_service.py  detection_service.py  file_service.py  legal_service.py
docker/: init.sql  nginx.conf
models/: README.md
static/: demo.html
tests/: test_detection.py
